# thing-explainer

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/thing_explainer/: __init__.py  build_wordlist.py  checker.py
tests/: test_checker.py
