[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thing-explainer"
dynamic = ["version"]
description = "Explain anything using only the 1000 most common English words. A hard-enforced Thing Explainer / Up Goer Five checker."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Luke Johnson", email = "luketheojohnson@gmail.com" }]
keywords = [
    "thing-explainer",
    "up-goer-five",
    "simple-writer",
    "plain-language",
    "readability",
    "vocabulary",
    "xkcd",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/LukeTheoJohnson/thing-explainer"
Repository = "https://github.com/LukeTheoJohnson/thing-explainer"
Issues = "https://github.com/LukeTheoJohnson/thing-explainer/issues"

[project.scripts]
thing-explainer = "thing_explainer.checker:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.version]
path = "src/thing_explainer/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/thing_explainer"]

[tool.hatch.build.targets.sdist]
include = [
    "src/thing_explainer",
    "tests",
    "README.md",
    "LICENSE",
    "SKILL.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
